--- a/anasayfa.html
+++ b/anasayfa.html
@@ -43,6 +43,35 @@
 </header>
 
 <!-- header bitiş-->
+
+
+<!-- anasayfa başlangıç  -->
+
+<section class="home" id="home">
+
+    <div class="container">
+
+        <div class="row min-vh-100 align-items-center pt-5">
+
+            <div class="col-md-6">
+                <img src="images/home.svg" class="w-100" alt="">
+            </div>
+
+            <div class="col-md-6 content text-center text-md-start pl-md-5">
+                <span>evde kal, güvende kal</span>
+                <h3>covid-19'dan kendini koru</h3>
+                <a href="hakkimizda.html" class="link-btn">daha fazla bilgi edinin</a>
+            </div>
+
+        </div>
+
+    </div>
+
+</section>
+
+<!-- anasayfa bitiş -->
+
+
 <!-- js file link  -->
 <script src="main.js"></script>
 </body>
