iletişimdeki hata ve breadcrumbfooter

--- a/onlemek.html
+++ b/onlemek.html
@@ -101,7 +101,41 @@
     </div>
 
 </section>
+<!-- footer section starts  -->
 
+<section class="footer">
+
+    <div class="container">
+
+        <div class="d-flex flex-wrap justify-content-center text-center text-sm-start">
+
+           
+            <div class="box p-3 m-2">
+                <h3>Hızlı Gidin</h3>
+                <a href="anasayfa.html">Anasayfa</a>
+                <a href="hakkimizda.html">Nedir</a>
+                <a href="onlemek.html">Nasıl Önlenir?</a>
+                <a href="doktorlarimiz.html">Doktorlarımız</a>
+                <a href="iletisim.html">İletişim</a>
+                <a href="dahafazlasi.html">Daha fazlası</a>
+            </div>
+
+
+            <div class="box p-3 m-2">
+                <h3>İletişim Adresleri</h3>
+                <a href="#">ALO 184</a>
+                <a href="https://sabim.gov.tr">Hemen canlı yardım!</a>
+            </div>
+
+        </div>
+
+        <div class="credit"> Bir <span>Berat Mert Bilgin ürünüdür.</span> | Tüm Hakları Saklıdır. </div>
+
+    </div>
+
+</section>
+
+<!-- footer section ends -->
 
 <!-- js file link  -->
 <script src="main.js"></script>
